@@ -1,3 +1,12 @@
+2013-06-24 Alan Modra  <amodra@gmail.com>
+
+	* src/powerpc/ffi.c (ffi_prep_args_SYSV): Move var declaration
+	before statements.
+	(ffi_prep_args64): Support little-endian.
+	(ffi_closure_helper_SYSV, ffi_closure_helper_LINUX64): Likewise.
+	* src/powerpc/linux64_closure.S (ffi_closure_LINUX64): Likewise.
+	* src/powerpc/ppc_closure.S (ffi_closure_SYSV): Likewise.
+
 2013-06-12  Mischa Jonker  <mjonker@synopsys.com>
 
 	 * configure.ac: Add support for ARC.
@@ -354,7 +363,7 @@
 	(required for shared libs on cygwin/mingw).
 	* Makefile.in: Rebuilt.
 
-2012-10-31  Alan Modra  <amodra@gmail.com>
+2012-10-31  Alan Modra  <amodra@gmail.co>
 
 	* src/powerpc/linux64_closure.S: Add new ABI support.
 	* src/powerpc/linux64.S: Likewise.
